--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ pydantic_core==2.16.3
 pynmeagps==1.0.33
 pyrtcm==1.0.16
 pyserial==3.5
+python-dotenv==1.0.1
 pyubx2==1.2.39
 typing_extensions==4.10.0
