update to remove endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # MQTT and Device Configuration
-TARGET_EP=a2u4kg7tuli9al-ats.iot.us-east-1.amazonaws.com
+TARGET_EP=example_endpoint
 THING_NAME=blake_home_1
 
 # Serial Port Configuration
