fixed the json string and fixed .env serial_port name

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ TARGET_EP=example_endpoint
 THING_NAME=blake_home_1
 
 # Serial Port Configuration
-PORT=COM5
+SERIAL_PORT=COM5
 BAUDRATE=38400
 TIMEOUT=1.0
 
